loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:9: error: illegal start of simple expression
    }
    ^Poucet2:10: error: 'while' expected but 'if' found.
    if(baggle<=2){
    ^Poucet2:13: error: '(' expected but ';' found.
    if(baggle>=3){
^